--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<h1>Etch-a-Sketch</h1>    
-</head>    
-<body>
-<p>Stand-in</p>    
-</body>
+    <head>
+        <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>    
+        <h1>Etch-a-Sketch</h1>    
+    </head>    
+    <body>
+        <p>Stand-in</p>
+        <script src="javascript.js"></script>    
+    </body>
 </html>
