--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>    
-        <h1>Etch-a-Sketch</h1>    
-    </head>    
-    <body>
-        <p>Stand-in</p>
-        <script src="javascript.js"></script>    
-    </body>
+<head>
+    <link rel='stylesheet' href='style.css'>     
+    <title>Etch-a-Sketch</title>   
+</head>    
+
+<body>
+    <div class='container' id='container'></div>
+    <p>Stand-in</p>
+    <script src='javascript.js'></script>    
+</body>
+
 </html>
